--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -38,7 +38,7 @@ document.addEventListener("deviceready", deviceListo, false);
 								<li id="ll_mapa"><a href="javascript:verMapa();" data-rel="dialog" data-transition="pop" >Mapa</a></li>	
 								<li id="ll_off"><a href="javascript:checkInternet(2);" data-rel="dialog" data-transition="pop" >Sincronizar Marcaciones <span id=id_sync></span></a></li>
 								
-								
+								<li id="ll_fecsis"><a href="javascript:getHoraServer();" >Reloj del sistema</a></li>
 								<li id="ll_dip"><a href="javascript:sendDevice();" data-rel="dialog" data-transition="pop" >Activar Dispositivo</a></li>									
 								<li><a href="javascript:window.location.href='index.html';" >Refrescar</a></li>	
     	  	  		<li id="ll_cerrar"><a href="javascript:cerrarSesion();" data-rel="dialog" data-transition="pop" >Cerrar sesi&oacute;n</a></li>		
