--- a/platforms/android/assets/www/sesion.html
+++ b/platforms/android/assets/www/sesion.html
@@ -20,7 +20,7 @@
 					<p id="form_interior">
 						<span class=titulo_interior>Asistencia Remota</span>
 						<br><br>
-						<span class=texto_interior>Te permite registrar asistencia en cualquier lugar, siempre y cuando tengas conexi&oacute;n a Internet, mediante 3G o Wifi.</span>
+						<span class=texto_interior>Te permite registrar asistencia en terreno.</span>
 						<p id="form_interior">						
 						<span class=texto_interior>Cualquier inquietud comun&iacute;cate v&iacute;a contacto@architeq.cl<br>Todos los derechos reservados a Architeq.cl</span>
 												</p>   <br>
