--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -35,7 +35,7 @@ document.addEventListener("deviceready", deviceListo, false);
 			  	  <div data-role="collapsible" data-collapsed="false" >
     				  <h3>Men&uacute;</h3>
 							<ul data-role="listview" data-inset="false">
-								<li id="ll_mapa"><a href="javascript:verMapa();" data-rel="dialog" data-transition="pop" >Mapa</a></li>	
+								<li id="ll_mapa"><a href="javascript:verMapa(0,0);" data-rel="dialog" data-transition="pop" >Mapa</a></li>	
 								<li id="ll_off"><a href="javascript:checkInternet(2);" data-rel="dialog" data-transition="pop" >Sincronizar Marcaciones <span id=id_sync></span></a></li>
 								
 								<li id="ll_fecsis"><a href="javascript:getHoraServer();" >Reloj del sistema</a></li>
@@ -88,7 +88,7 @@ document.addEventListener("deviceready", deviceListo, false);
 					<p id="form_interior">
 						<span class=titulo_interior>Asistencia Remota</span>
 						<br><br>
-						<span class=texto_interior>Te permite registrar asistencia en cualquier lugar, siempre y cuando tengas conexi&oacute;n a Internet, mediante 3G o Wifi.</span>
+						<span class=texto_interior>Te permite registrar asistencia en terreno.</span>
 						<br><br>
 						<input type="button" onclick="inicio_ses();" value="Inicio Sesi&oacute;n">
 						
